# regimes

./: CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
examples/: 01_models_and_visualization.ipynb  02_structural_break_tests.ipynb  03_dynamic_estimation.ipynb  04_markov_switching.ipynb  05_gets_indicator_saturation.ipynb  exploration.ipynb
src/regimes/: __init__.py  _version.py  api.py
src/regimes/diagnostics/: __init__.py  misspec.py
src/regimes/gets/: __init__.py  indicators.py  representation.py  results.py  saturation.py  selection.py
src/regimes/markov/: __init__.py  models.py  restricted.py  results.py  selection.py  sequential_restriction.py
src/regimes/models/: __init__.py  adl.py  ar.py  base.py  ols.py
src/regimes/results/: __init__.py  base.py
src/regimes/rolling/: __init__.py  adl.py  ar.py  base.py  ols.py
src/regimes/tests/: __init__.py  bai_perron.py  base.py  chow.py  cusum.py
src/regimes/visualization/: __init__.py  breaks.py  cusum.py  diagnostics.py  gets.py  markov.py  params.py  rolling.py
tests/: conftest.py  test_results_base.py
tests/reference_data/: README.md  dgp1_mean_shift.csv  dgp2_regression_break.csv  dgp3_two_breaks.csv  generate_bai_perron_reference.R
tests/test_diagnostics/: test_misspec.py
tests/test_gets/: __init__.py  test_gets_integration.py  test_gets_visualization.py  test_indicators.py  test_representation.py  test_saturation.py  test_selection.py
tests/test_markov/: __init__.py  conftest.py  test_markov_adl.py  test_markov_ar.py  test_markov_regression.py  test_markov_utils.py  test_restricted.py  test_selection.py  test_sequential_restriction.py
tests/test_models/: test_adl.py  test_ols.py
tests/test_property/: conftest.py  test_adl_properties.py  test_ar_properties.py  test_ols_properties.py  test_rolling_properties.py
tests/test_results/: test_results_base.py
tests/test_rolling/: test_rolling_adl.py  test_rolling_ar.py  test_rolling_ols.py
tests/test_tests/: test_bai_perron.py  test_bai_perron2.py  test_bai_perron_reference.py  test_chow.py  test_cusum.py
tests/test_visualization/: test_breaks.py  test_cusum.py  test_diagnostics.py  test_markov_viz.py  test_params.py  test_rolling_viz.py  test_style.py
