[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "regimes"
dynamic = ["version"]
description = "Structural break detection and estimation for time-series econometrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Morten Tabor", email = "morten@knightianuncertainty.org" },
]
keywords = [
    "econometrics",
    "structural breaks",
    "time-series",
    "Bai-Perron",
    "forecasting",
    "statsmodels",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21,<3.0",
    "pandas>=1.4,<3.0",
    "statsmodels>=0.13,<1.0",
    "scipy>=1.8,<2.0",
    "matplotlib>=3.5,<4.0",
    "cycler>=0.11",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "pandas-stubs",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "nbsphinx>=0.9",
    "myst-parser>=2.0",
    "ipykernel",
]
all = ["regimes[dev,test,docs]"]

[project.urls]
Homepage = "https://github.com/knightianuncertainty/regimes"
Documentation = "https://regimes.readthedocs.io"
Repository = "https://github.com/knightianuncertainty/regimes"
Changelog = "https://github.com/knightianuncertainty/regimes/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/regimes/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/regimes"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]
exclude = ["src/regimes/_version.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "NPY",    # NumPy-specific rules
    "PD",     # pandas-vet
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument (common in base classes)
    "ARG002", # unused method argument
    "RUF005", # consider iterable unpacking instead of concatenation
    "SIM108", # use ternary operator (readability judgment call)
    "C414",   # unnecessary list() call within sorted()
    "RUF043", # ambiguous implicit concatenation in collection
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "PLR2004", "RUF059", "NPY002", "TC002", "B905", "B007"]
"__init__.py" = ["F401"]
"src/regimes/tests/bai_perron.py" = ["RUF002"]  # deliberate mathematical Unicode (α, λ, σ, δ)

[tool.ruff.lint.isort]
known-first-party = ["regimes"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict_equality = true
show_error_codes = true


[[tool.mypy.overrides]]
module = [
    "statsmodels.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=regimes",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/regimes"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
